# compiler_TA_bot

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  run.cmd
