[project]
name = "compiler-ta-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "garyellow",email = "gary20011110@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "discord-py (>=2.6.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
